# sample-cost-guard-for-amazon-bedrock

./: .gitignore  DEPLOY-GUIDE.md  PLAN-one-click-deploy.md  README.md  deploy.sh  requirements-dev.txt  template.yaml
agent/: main.py  pyproject.toml  requirements.txt
common/: config.py  holiday.py  iam_scanner.py  labels.py  pricing.py  webhook.py
docs/: dashboard-redesign-spec.md
monitor/: handler.py
reconciler/: handler.py
tests/: test_config.py  test_holiday.py  test_iam_scanner.py  test_labels.py  test_monitor.py  test_monitor_delta.py  test_monitor_extended.py  test_notify_policy.py  test_pricing.py  test_reconciler.py  test_reconciler_ai.py  test_reconciler_extended.py  test_version.py  test_web_api.py  test_web_crossyear.py  test_web_extended.py  test_webhook.py
web/: app.py  requirements.txt
web/static/: index.html
