[project]
name = "bedrock-cost-guard-agent"
version = "0.1.0"
description = "AI billing summary agent for Bedrock Cost Guard (runs on AgentCore Runtime)"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.0.0",
    "strands-agents>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
